# ml-ops_fall_Dmitrieva

./: .pre-commit-config.yaml  pyproject.toml
ml-project2/: pyproject.toml
ml-project2/ml_project2/: main.py
